fix issue of cropped button in signup page

--- a/scss/pages/_signin.scss
+++ b/scss/pages/_signin.scss
@@ -1,7 +1,3 @@
-.signin-content {
-  height: calc(100vh - 15px)!important;
-}
-
 .sign-in {
   background-color: $white;
   .branding {
